--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1,6 +1,6 @@
 {
-  "boilerplate.components.Footer.author.message": "Made with love by {author}.",
-  "boilerplate.components.Footer.license.message": "This project is licensed under the MIT license.",
+  "boilerplate.components.Footer.author.message": "Produced thoughtfully by {author}.",
+  "boilerplate.components.Footer.license.message": "Welcome to the Epic Strings project.",
   "boilerplate.components.Header.features": "Features",
   "boilerplate.components.Header.home": "Home",
   "boilerplate.containers.FeaturePage.css.header": "Features",
