--- a/docs/js/i18n.md
+++ b/docs/js/i18n.md
@@ -30,12 +30,12 @@ export const scope = 'boilerplate.components.Footer';
 export default defineMessages({
   licenseMessage: {
     id: `${scope}.license.message`, // equals 'boilerplate.components.Footer.license.message'
-    defaultMessage: 'This project is licensed under the MIT license.',
+    defaultMessage: 'Welcome to the Epic Strings project.',
   },
   authorMessage: {
     id: `${scope}.author.message`,
     defaultMessage: `
-      Made with love by {author}.
+      Made by {author}.
     `,
   },
 });
